--- a/vs/wix.html
+++ b/vs/wix.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<!--  Last Published: Mon Oct 12 2020 11:22:56 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Oct 13 2020 06:13:19 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f7ace6a19656db585edef80" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Wix</title>
-  <meta content="Wix" property="og:title">
-  <meta content="Wix" property="twitter:title">
+  <title>Jraft vs. Wix: Experience content management that doesn&#x27;t suck</title>
+  <meta content="Whilst Wix offers unmatched simplicity, it comes at the cost of performance and site management tools. Jraft offers over 100 beautiful templates, for free — and you can customize every detail without coding, to build a performant publication optimised for SEO and discoverability." name="description">
+  <meta content="Jraft vs. Wix: Experience content management that doesn&#x27;t suck" property="og:title">
+  <meta content="Whilst Wix offers unmatched simplicity, it comes at the cost of performance and site management tools. Jraft offers over 100 beautiful templates, for free — and you can customize every detail without coding, to build a performant publication optimised for SEO and discoverability." property="og:description">
+  <meta content="https://pbs.twimg.com/profile_banners/1227448256613027840/1598072047/1500x500" property="og:image">
+  <meta content="Jraft vs. Wix: Experience content management that doesn&#x27;t suck" property="twitter:title">
+  <meta content="Whilst Wix offers unmatched simplicity, it comes at the cost of performance and site management tools. Jraft offers over 100 beautiful templates, for free — and you can customize every detail without coding, to build a performant publication optimised for SEO and discoverability." property="twitter:description">
+  <meta content="https://pbs.twimg.com/profile_banners/1227448256613027840/1598072047/1500x500" property="twitter:image">
+  <meta property="og:type" content="website">
+  <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="../css/normalize.css" rel="stylesheet" type="text/css">
   <link href="../css/webflow.css" rel="stylesheet" type="text/css">
@@ -19,13 +26,17 @@
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-141202928-2"></script>
   <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-141202928-2', {'anonymize_ip': false, 'optimize_id': 'OPT-W8NZSFV'});</script>
   <script type="text/javascript">!function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';n.agent='plwebflow';n.queue=[];t=b.createElement(e);t.async=!0;t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,document,'script','https://connect.facebook.net/en_US/fbevents.js');fbq('init', '669556453669016');fbq('track', 'PageView');</script>
-  <!--  Google Tag Manager  -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-5WLPRZG');</script>
-  <!--  End Google Tag Manager  -->
+  <!--  Hotjar Tracking Code for www.tryjraft.com  -->
+  <script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:2036286,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
 </head>
 <body class="body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navigation w-nav">
@@ -317,8 +328,5 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5f475d95bc662b718071304a" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="../js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
-  <!--  Google Tag Manager (noscript)  -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5WLPRZG" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  <!--  End Google Tag Manager (noscript)  -->
 </body>
 </html>
