--- a/vs/wordpress.html
+++ b/vs/wordpress.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<!--  Last Published: Mon Oct 12 2020 11:22:56 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Oct 13 2020 06:13:19 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f730f6fbd37202a4a0633fc" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>What WordPress really costs you</title>
-  <meta content="What WordPress really costs you" property="og:title">
-  <meta content="What WordPress really costs you" property="twitter:title">
+  <title>Jraft vs. WordPress: Discover the WordPress alternative</title>
+  <meta content="The serious publisher&#x27;s alternative to Wordpress. Jraft combines a CMS with intuitive real-time content management tools with powerful visual publication design tools, so you can build a performant publication and manage your team effectively. And with nothing to install, automatic updates, and no PHP, it&#x27;s the WordPress alternative you need." name="description">
+  <meta content="Jraft vs. WordPress: Discover the WordPress alternative" property="og:title">
+  <meta content="The serious publisher&#x27;s alternative to Wordpress. Jraft combines a CMS with intuitive real-time content management tools with powerful visual publication design tools, so you can build a performant publication and manage your team effectively. And with nothing to install, automatic updates, and no PHP, it&#x27;s the WordPress alternative you need." property="og:description">
+  <meta content="https://pbs.twimg.com/profile_banners/1227448256613027840/1598072047/1500x500" property="og:image">
+  <meta content="Jraft vs. WordPress: Discover the WordPress alternative" property="twitter:title">
+  <meta content="The serious publisher&#x27;s alternative to Wordpress. Jraft combines a CMS with intuitive real-time content management tools with powerful visual publication design tools, so you can build a performant publication and manage your team effectively. And with nothing to install, automatic updates, and no PHP, it&#x27;s the WordPress alternative you need." property="twitter:description">
+  <meta content="https://pbs.twimg.com/profile_banners/1227448256613027840/1598072047/1500x500" property="twitter:image">
+  <meta property="og:type" content="website">
+  <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="../css/normalize.css" rel="stylesheet" type="text/css">
   <link href="../css/webflow.css" rel="stylesheet" type="text/css">
@@ -19,13 +26,17 @@
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-141202928-2"></script>
   <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-141202928-2', {'anonymize_ip': false, 'optimize_id': 'OPT-W8NZSFV'});</script>
   <script type="text/javascript">!function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';n.agent='plwebflow';n.queue=[];t=b.createElement(e);t.async=!0;t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,document,'script','https://connect.facebook.net/en_US/fbevents.js');fbq('init', '669556453669016');fbq('track', 'PageView');</script>
-  <!--  Google Tag Manager  -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-5WLPRZG');</script>
-  <!--  End Google Tag Manager  -->
+  <!--  Hotjar Tracking Code for www.tryjraft.com  -->
+  <script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:2036286,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
 </head>
 <body class="body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navigation w-nav">
@@ -75,7 +86,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </div>
   <div class="comparison-hero">
     <div class="div-block-1416">
-      <div class="div-block-1427"><img src="../images/Editor-Comp.png" loading="eager" width="1120" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 40vw, 41vw" srcset="../images/Editor-Comp-p-500.png 500w, ../images/Editor-Comp-p-800.png 800w, ../images/Editor-Comp-p-1080.png 1080w, ../images/Editor-Comp-p-1600.png 1600w, ../images/Editor-Comp-p-2000.png 2000w, ../images/Editor-Comp.png 2240w" alt="" class="image-58"></div>
+      <div class="div-block-1427"><img src="../images/Editor-Comp.png" loading="eager" width="1120" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 859.796875px, 87vw" srcset="../images/Editor-Comp-p-500.png 500w, ../images/Editor-Comp-p-800.png 800w, ../images/Editor-Comp-p-1080.png 1080w, ../images/Editor-Comp-p-1600.png 1600w, ../images/Editor-Comp-p-2000.png 2000w, ../images/Editor-Comp.png 2240w" alt="" class="image-58"></div>
       <div class="div-block-1419">
         <div class="div-block-1428">
           <h1 class="heading-16">Jraft vs Wordpress</h1>
@@ -334,8 +345,5 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5f475d95bc662b718071304a" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="../js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
-  <!--  Google Tag Manager (noscript)  -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5WLPRZG" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  <!--  End Google Tag Manager (noscript)  -->
 </body>
 </html>
