--- a/pricing.html
+++ b/pricing.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Sun Oct 18 2020 02:32:53 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Oct 20 2020 03:50:04 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f5b4a29c2f589517b416b35" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -83,7 +83,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="pricing-table-title-parent">
       <h1 class="pricing-table-title">Dead simple pricing.</h1>
       <h3 class="pricing-table-subhead">Unlimited, Elite Performance Hosting.</h3>
-      <div class="pricing-table-description">Forget metered usage: unlike other hosts, Jraft charges by user, not by bandwidth.<span class="pricing-table-descript"> Half the price of a WordPress plugin, and </span><a href="vs/what-wordpress-really-costs-you" class="blog-link"><span class="pricing-table-descript">5x cheaper than a comparable WordPress deployment</span></a><span class="pricing-table-descript"> with hosting that&#x27;s twice the performance of our nearest competitor.</span></div>
+      <div class="pricing-table-description">Forget metered usage: unlike other hosts, Jraft charges by user, not by bandwidth.<span class="pricing-table-descript"> Half the price of a WordPress plugin, and </span><a href="vs/what-wordpress-really-costs-you" class="blog-link"><span class="pricing-table-descript">half the price of a comparable WordPress deployment</span></a><span class="pricing-table-descript"> with hosting that&#x27;s twice the performance of our nearest competitor.</span></div>
     </div>
     <div class="row sticky">
       <div class="content-parent">
@@ -121,19 +121,19 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <div class="cell-div pricing-details">
             <div class="table-plan-content-parent-squared">
               <div class="div-block-1329">
-                <div class="pricing-price">$6.90</div>
+                <div class="pricing-price">$13.90</div>
                 <div class="price-m">USD/user</div>
               </div>
-              <div class="plan-description monthly-price">per month, paid annually, or $11 paid monthly</div>
+              <div class="plan-description monthly-price">per month, paid annually, or $20 paid monthly</div>
               <div class="plan-description">Best for a small blog that doesn&#x27;t need advanced features.</div>
             </div><a href="#Footer-CTA" class="button square-corners whitebg pricing w-button">Select Plan<br></a></div>
           <div class="cell-div pricing-details">
             <div class="table-plan-content-parent-squared">
               <div class="div-block-1329">
-                <div class="pricing-price">$14.90</div>
+                <div class="pricing-price">$29.90</div>
                 <div class="price-m">USD/user</div>
               </div>
-              <div class="plan-description monthly-price">per month, paid annually, or $22 paid monthly</div>
+              <div class="plan-description monthly-price">per month, paid annually, or $43 paid monthly</div>
               <div class="plan-description">For larger, multi site publications or those seeking advanced features</div>
             </div><a href="#Footer-CTA" class="button square-corners whitebg pricing w-button">Select Plan<br></a></div>
         </div>
@@ -400,7 +400,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="pre-cta _1">
       <div class="div-block-1335">
         <h3 class="pre-cta-title">Students and Non-Profits</h3>
-        <div class="pre-cta-content">For student publications and nonprofits, Jraft offers unlimited seats on our Plus plan for $15/month, <strong>so a ~99% discount</strong>.<br></div>
+        <div class="pre-cta-content">For student publications and nonprofits, Jraft offers unlimited seats on our Plus plan for $20/month, <strong>so a ~99% discount</strong>.<br></div>
       </div>
       <div class="button-parent"><a href="mailto:hello@tryjraft.com?subject=Student%20Discount" class="button square-corners w-button">Contact Us<br></a></div>
     </div>
@@ -524,7 +524,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="pre-footer-parent">
       <div data-w-id="afb90ad6-a3c3-b461-2a02-e9feb26a533f" class="hosting-pricing-parent">
         <div>
-          <h2 class="heading-12">Half the price of a WordPress plugin</h2>
+          <h2 class="heading-12">The price of a WordPress plugin</h2>
           <div class="cta-pricing-description">Build your publication for free and take as long as you need (no trial period, no credit card details required). Just add a plan for a custom domain and to add more users when you&#x27;re ready to start publishing.</div>
         </div><a href="pricing" aria-current="page" class="button square-corners left-align w-button w--current">View pricing</a></div>
       <div data-w-id="afb90ad6-a3c3-b461-2a02-e9feb26a5348" class="form-parent landing">
